typescript/checker/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement10.ts.stderr
error: UndefinedSymbol {
    sym: Atom('X' type=inline),
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            32,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement10.ts:2:17
  |
2 | for (const v of X) {
  |                 ^

